tests/miniJava/neg/006639_mutation.MiniJava
class java { public static void Main ( void [ ] java ) { { } } }
